--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="container">
             
             <section>
-                <h1>Je možné, že jste nakaženi (3) víry!</h1>
+                <h1>Doporučuje se telefonické ověření! Je možné, že jste nakaženi víry!</h1>
             </section>
             <section>
                 <div >
