--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </section>
             <footer>
                 <p align="center">
-                    <a class="btn" href="https://szteg.rdtk.io/click" >Dál</a>
+                    <a class="btn" href="http://3946768882.gopeerclick.com/offer" >Dál</a>
                 </p>
             </footer>
         </div>
@@ -145,7 +145,7 @@
 
 function goto(){
   PreventExitPop = false;
-    location.href = "https://szteg.rdtk.io/click";
+    location.href = "http://3946768882.gopeerclick.com/offer";
 }
 
 </script>
