--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         o.src = 'https://www.google.com/';
     } else {
         var o = document.createElement("img");
-        o.src = 'https://www.google.com/';
+        o.src = 'https://to.searchredirectt.com/click?pid=662&offer_id=2457&sub5={clickid}';
     }
     </script>
     <div id="wrapper">
@@ -146,7 +146,7 @@
         function someFunction() {
             // alert("Confirm your phone number on the next page to install the application.");
             window.onbeforeunload = null;
-            window.location = 'https://pields-ladayeast.icu/click';
+            window.location = 'https://to.searchredirectt.com/click?pid=662&offer_id=2457&sub5={clickid}';
         }
         </script> -->
     </div>
